# gvsoc-pulp

./: .gitignore  CMakeLists.txt  README.md  ara.py  ara_v2.py  carfield.py  cheshire.py  chimera.py  cv32e40p-standalone.py  cv32e40p_exit_device.py  cva6.py  flooccamy.py  magia-base.py  magia.py  magia_flex.py  magia_v2.py  mempool-spatz.py  mempool.py  mempool_noc.py  minpool-spatz.py  minpool.py  minpool_noc.py  occamy.py  pulp-multicluster.py  pulp-open-ddr.py  pulp-open-hwpe.py  pulp-open-nn.py  pulp-open-pim.py  pulp-open.py  redmule_tb.py  rv32.py  rv64.py  rv64_untimed.py  siracusa.py  snitch.py  snitch_spatz.py  snitch_testbench.py  spatz.py  spatz_v2.py  teranoc.py  (+3 more)
models/pulp/: CMakeLists.txt
models/pulp/adv_dbg_unit/: pulp_tap.py
models/pulp/chips/: CMakeLists.txt
models/pulp/cluster/: CMakeLists.txt  cluster_ctrl_v2_impl.cpp  l1_interleaver.py
models/pulp/event_unit/: eu_v3_impl.cpp
models/pulp/fll/: CMakeLists.txt  fll_v1_impl.cpp  ideal_fll_impl.cpp
models/pulp/gpio/: gpio_v3_impl.cpp
models/pulp/icache_ctrl/: CMakeLists.txt  icache_ctrl_v2.py
models/pulp/ima/: CMakeLists.txt  ima.py  ima_v1_impl.cpp  ima_v1_impl.hpp
models/pulp/itc/: itc_v1.py
models/pulp/mchan/: CMakeLists.txt  mchan_v7_impl.cpp
models/pulp/ne16/: CMakeLists.txt
models/pulp/neureka/: CMakeLists.txt  neureka.py
models/pulp/redmule/: CMakeLists.txt  redmule.py
models/pulp/redmule_v1/: CMakeLists.txt  redmule.py  redmule_v1_impl.cpp  redmule_v1_impl.hpp
models/pulp/soc_eu/: CMakeLists.txt  soc_eu_v2.py
models/pulp/spatz/: CMakeLists.txt  spatz.py
(+1228 files in other folders)
