add_subdirectory(adv_dbg_unit)
add_subdirectory(cluster)
add_subdirectory(padframe)
add_subdirectory(cpu/iss)
add_subdirectory(event_unit)
add_subdirectory(mchan)
add_subdirectory(timer)
add_subdirectory(ne16)
add_subdirectory(icache_ctrl)
add_subdirectory(fll)
add_subdirectory(itc)
add_subdirectory(chips)
add_subdirectory(gpio)
add_subdirectory(udma)
add_subdirectory(soc_eu)
add_subdirectory(stdout)